--- a/client/dangky.html
+++ b/client/dangky.html
@@ -1,3 +1,4 @@
+<!-- client/dangky.html -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -43,11 +44,13 @@
                 <input type="password" id="confirm-password" class="form-control" placeholder="Nhập lại mật khẩu" required>
             </div>
             <button type="submit" class="btn btn-primary w-100" style="height: 50px; font-size: 1.1rem;">ĐĂNG KÝ</button>
+            <p id="regMessage" class="mt-3"></p>
             <p class="mt-3">Bạn đã có tài khoản? <a href="dangnhap.html">Đăng nhập</a></p>
         </form>
-        <p id="regMessage"></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="./src/js/auth.js"></script>
+
 </body>
 </html>
