--- a/client/dangnhap.html
+++ b/client/dangnhap.html
@@ -1,3 +1,4 @@
+<!-- client/dangnhap.html -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -37,11 +38,12 @@
                 <input type="password" id="password" class="form-control" placeholder="Nhập mật khẩu" required>
             </div>
             <button type="submit" class="btn btn-primary w-100" style="height: 50px; font-size: 1.1rem;">ĐĂNG NHẬP</button>
+            <p id="loginMessage" class="mt-3"></p>
             <p class="mt-3">Bạn chưa có tài khoản? <a href="dangky.html">Đăng ký</a></p>
         </form>
-        <p id="loginMessage"></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="./src/js/auth.js"></script>
 </body>
 </html>
