--- a/client/trangchu.html
+++ b/client/trangchu.html
@@ -1,103 +1,80 @@
-<!-- client/trangchu.html -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ứng Dụng Hội Nghị</title>
+  <title>Trang Chủ</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #e0f7fa;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .card-custom {
-      border-radius: 15px;
-      transition: transform 0.2s;
-      cursor: pointer;
-    }
-    .card-custom:hover {
-      transform: scale(1.05);
-    }
-    .icon {
-      font-size: 60px;
-      color: #17a2b8;
-    }
-    .header-title {
-      margin-top: 30px;
-      margin-bottom: 30px;
-      font-weight: bold;
-      color: #007bff;
-    }
-    .user-info {
-      margin-top: 20px;
-      font-size: 15px;
-      color: #495057;
-    }
-    .navbar {
-      background-color: #b2ebf2;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 15px;
-      background: #b2ebf2;
-      text-align: center;
-      font-size: 14px;
-      color: #555;
-    }
-  </style>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-    <div class="container-fluid">
-      <h1 class="navbar-brand">📹 Hội Nghị Trực Tuyến</h1>
-    </div>
-  </nav>
-  <div class="container text-center">
-    <h2 class="header-title">Xin chào <span id="userName">Người Dùng</span> 👋</h2>
-    <div class="user-info">
-      <p>Email: <span id="userEmail">example@example.com</span></p>
-      <p>📱 Số điện thoại: <span id="userPhone">+84 912 345 678</span></p>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-4">
-        <a href="video.html" style="text-decoration: none; color: inherit;">
-          <div class="card card-custom p-4 shadow-sm">
-            <div class="icon">🕒</div>
-            <h4 class="mt-3">Bắt Đầu</h4>
-            <p>Mở phòng họp trực tuyến 24/7 của bạn</p>
-          </div>
-        </a>
+<body class="bg-light">
+  <div class="container py-5">
+    <h1 class="text-center mb-4">📞 Ứng dụng Video Call</h1>
+    <div class="card shadow p-4">
+      <h4>Xin chào <span id="usernameDisplay"></span>!</h4>
+      <button id="createRoomBtn" class="btn btn-primary mt-3">Tạo phòng mới</button>
+      <div id="roomInfo" class="mt-3" style="display: none;">
+        <p>Mã phòng của bạn: <span id="roomIdDisplay"></span></p>
+        <button id="copyRoomBtn" class="btn btn-secondary">Sao chép mã phòng</button>
       </div>
-      <div class="col-md-4">
-        <div class="card card-custom p-4 shadow-sm">
-          <div class="icon">📅</div>
-          <h4 class="mt-3">Lên Lịch</h4>
-          <p>Thiết lập một cuộc gọi hội nghị cho sau</p>
-        </div>
+      <div class="mt-3">
+        <input type="text" id="roomIdInput" class="form-control mb-2" placeholder="Nhập mã phòng để tham gia">
+        <button id="joinRoomBtn" class="btn btn-success">Tham gia phòng</button>
       </div>
-    </div>
-    <div class="row mt-4">
-      <div class="col-md-8 offset-md-2">
-        <div class="card p-3 shadow-sm">
-          <h6 class="mb-0">📞 Thông tin gọi vào</h6>
-          <small>Bắt đầu một cuộc gọi hội nghị bằng điện thoại</small>
-        </div>
-      </div>
+      <button id="logoutBtn" class="btn btn-danger mt-3">Đăng xuất</button>
     </div>
   </div>
-  <footer>
-    © 2025 Ứng Dụng Hội Nghị | Phát triển bởi Nhóm của bạn 🚀
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-    <script src="./src/js/auth.js"></script>
+
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      const username = localStorage.getItem("username");
-      const email = localStorage.getItem("email");
-      if (username) document.getElementById("userName").innerText = username;
-      if (email) document.getElementById("userEmail").innerText = email;
+      const createRoomBtn = document.getElementById("createRoomBtn");
+      const joinRoomBtn = document.getElementById("joinRoomBtn");
+      const roomIdInput = document.getElementById("roomIdInput");
+      const logoutBtn = document.getElementById("logoutBtn");
+      const usernameDisplay = document.getElementById("usernameDisplay");
+      const roomInfo = document.getElementById("roomInfo");
+      const roomIdDisplay = document.getElementById("roomIdDisplay");
+      const copyRoomBtn = document.getElementById("copyRoomBtn");
+      const username = localStorage.getItem("username") || "Khách";
+      const userId = localStorage.getItem("user_id") || null;
+      usernameDisplay.textContent = username;
+
+      function generateRandomRoomId() {
+        return Math.floor(10000000 + Math.random() * 90000000).toString(); // 8-digit room ID
+      }
+
+      createRoomBtn.addEventListener("click", () => {
+        const roomId = generateRandomRoomId();
+        console.log('Generated roomId:', roomId);
+        roomIdDisplay.textContent = roomId;
+        roomInfo.style.display = 'block';
+        window.location.href = `/${roomId}?userId=${userId || 'anonymous'}`;
+      });
+
+      copyRoomBtn.addEventListener("click", () => {
+        navigator.clipboard.writeText(roomIdDisplay.textContent).then(() => {
+          alert('Mã phòng đã được sao chép!');
+        }).catch(err => {
+          console.error('Failed to copy:', err);
+          alert('Không thể sao chép mã phòng.');
+        });
+      });
+
+      joinRoomBtn.addEventListener("click", () => {
+        const roomId = roomIdInput.value.trim();
+        if (roomId && /^\d{8}$/.test(roomId)) {
+          window.location.href = `/${roomId}?userId=${userId || 'anonymous'}`;
+        } else {
+          alert("Vui lòng nhập mã phòng hợp lệ (8 chữ số)");
+        }
+      });
+
+      logoutBtn.addEventListener("click", () => {
+        console.log('👋 Đăng xuất');
+        localStorage.removeItem("username");
+        localStorage.removeItem("user_id");
+        localStorage.removeItem("email");
+        window.location.href = "/dangnhap.html";
+      });
     });
   </script>
 </body>
