--- a/client/dangky.html
+++ b/client/dangky.html
@@ -49,8 +49,7 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./src/js/auth.js"></script>
-
+    <script src="https://6f00826bdf12.ngrok-free.app/socket.io/socket.io.js"></script>
+    <script src="./src/js/auth.js"></script> <!-- Sửa đường dẫn -->
 </body>
 </html>
